# gui-web

./: .gitignore  .python-version  README.md  pyproject.toml  settings.yaml  setup.py
docs/: advanced-usage.md  configurations.md  distribution.md  django.md  fastapi.md  flask.md  readme.md
examples/test-django/: gui.py  settings.yaml
test/: settings.py
web_gui/: __init__.py
web_gui/gui/: __init__.py  actions.py  logger.py  main.py
web_gui/gui/browser/: __init__.py  main.py  path.py
web_gui/gui/servers/: __init__.py  base.py  django.py  fastapi.py  flask.py
