[project]
name = "gui_web"
dynamic = ["scripts"]
version = "0.2.2"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR GPL-2.0-or-later OR (FSFUL AND BSD-2-Clause)"
dependencies = [
    "colorlog>=6.9.0",
    "dynaconf>=3.2.11",
    "psutil>=7.0.0",
    "setuptools>=80.9.0",
    "structlog>=25.4.0",
    "waitress>=3.0.2",
    "whitenoise>=6.9.0",
]

[tool.uv.pip]
system = true
upgrade = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.envs.test --reuse-db --import-mode=importlib"
python_files = ["tests.py", "test_*.py"]


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["E501", "B905", "C901", "I001", "F403"]
ignore = [
    "S101",
    "RUF012",
    "SIM102",
    "UP038",
    "E501",
    "B905",
    "C901",
    "I001",
    "F403",
    "F405",
    "F811",
    "B904",
    "ERA001",
    "DJ001",
    "DJ012",
    "RUF100",
    "TID252",
    "TRY300",
    "F401",
    "F841",
    "E402",
    "E741",
]
extend-unsafe-fixes = ["UP038"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
target-version = ["py312"]
line-length = 88
extend-exclude = ["*/migrations/*.py", "staticfiles/*"]
select = ["E", "W", "F", "I", "C", "B", "UP"]


[tool.dynaconf]
env = "default"
settings_files = ["settings.toml"]

[dependency-groups]
dev = ["django>=4.2.21", "fastapi>=0.115.12", "flask>=3.1.1"]
